Add spine temp arfifact storage to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,8 @@ build/
 out/
 
 # Spine temporary artifact storage
-*/.spine/
-model/*/.spine/
+.spine/
+
 
 # Login details to Maven repository.
 # Each workstation should have developer's login defined in this file.
