--- a/deployment/local-inmem/build.gradle
+++ b/deployment/local-inmem/build.gradle
@@ -18,11 +18,6 @@
 // OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 //
 
-/**
- * This package contains implementation for classes which provides
- * methods to process aggregates and projection.
- */
-@ParametersAreNonnullByDefault
-package javaclasses.mealorder.c.aggregate;
-
-import javax.annotation.ParametersAreNonnullByDefault;
+dependencies {
+    compile project(path: ':server')
+}
