--- a/ext.gradle
+++ b/ext.gradle
@@ -1,48 +1,50 @@
-/*
- * Copyright 2017, TeamDev Ltd. All rights reserved.
- *
- * Redistribution and use in source and/or binary forms, with or without
- * modification, must retain the above copyright notice and the following
- * disclaimer.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
- * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
- * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
- * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
- * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
- * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
- * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
- *
- *
- * This file lists versions of most of the dependencies, used in this sample application.
- *
- * As long as module dependencies are periodically updated, the version-update
- * commits often pollute the VCS log for `build.gradle` file. Often, such commits interfere
- * with the important changes to the build procedure.
- *
- * Having a distinct configuration file like this one allows to trace dependency version changes
- * and other configuration updates separately.
- */
+//
+// Copyright 2018, TeamDev Ltd. All rights reserved.
+//
+// Redistribution and use in source and/or binary gorms, with or without
+// modification, must retain the above copyright notice and the following
+// disclaimer.
+//
+// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
+// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
+// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+//
+
+
+final def SPINE_VERSION = '0.10.15-SNAPSHOT'
 
 project.ext {
+    // TODOList version
+    appVersion = SPINE_VERSION
 
-    // Application version.
-    //
-    appVersion = '0.0.1-SNAPSHOT'
+    // Spine dependencies' versions
+    spineVersion = SPINE_VERSION
+    spineJdbcStorageVersion = '0.9.64-SNAPSHOT'
+    spineBaseVersion = '0.10.0'
 
-    // Versions of Spine modules.
-    //
-    spineVersion = '0.10.20-SNAPSHOT'
-    spineBaseVersion = '0.10.1-SNAPSHOT'
-
-    // Versions of the most definitive third-party libraries.
-    //
+    // Main scope third party dependencies' versions
     protobufGradlePluginVersion = '0.8.3'
+    appEngineVersion = '1.9.42'
     guavaVersion = '20.0'
-    protobufVersion = '3.2.0'
-    slf4jVersion = '1.7.25'
+    protobufVersion = '3.5.0'
+    gRpcVersion = '1.8.0'
+    slf4jVersion = '1.7.21'
+    servletApiVersion = '3.1.0'
+    gcloudJavaVersion = '0.2.8'
+    cloudSqlSocketFactoryVersion = '1.0.4'
+    shadowJarVersion = '2.0.1'
+    mysqlDriverVersion = '6.0.6'
+    nettyBoringsslVersion = '2.0.6.Final'
+
+    // Test scope third party dependencies' versions
+    jUnitPlatformVersion = '1.0.0'
+    jUnitVersion = '5.0.0'
 }
