--- a/scripts/grpc.gradle
+++ b/scripts/grpc.gradle
@@ -18,17 +18,18 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-// Apply this script if it is needed to generate Protobuf descriptor set (special files with `.desc` extension).
-// These files may be needed by Gradle plugins to obtain descriptors of `.proto` files of this project.
+// Apply this script to use `grpc` plugin in `generateProto` tasks.
+// This is needed for gRPC services generation.
+// Also adds generated gRPC code to the source sets.
+
 protobuf {
     generateProtoTasks {
         all().each { final task ->
             task.plugins {
-                task.generateDescriptorSet = true
-                task.descriptorSetOptions.path = "$projectDir/build/descriptors/${task.sourceSet.name}.desc"
-                task.descriptorSetOptions.includeImports = true
-                task.descriptorSetOptions.includeSourceInfo = true
+                grpc {}
             }
         }
     }
 }
+
+sourceSets.main.java.srcDirs += [generatedGrpcDir]
