--- a/testutil-api/build.gradle
+++ b/testutil-api/build.gradle
@@ -18,10 +18,11 @@
 // OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 //
 
-/**
- * This package provides classes for working with aggregate and projection repositories.
- */
-@ParametersAreNonnullByDefault
-package javaclasses.mealorder.repository;
-
-import javax.annotation.ParametersAreNonnullByDefault;
+dependencies {
+    compile project(path: ':api-java')
+    compile project(path: ':model')
+    compile("io.spine:spine-testutil-core:${spineVersion}") {
+        // We are using JUnit 5.x instead of 4.x dependency of Spine testing framework.
+        exclude group: 'junit'
+    }
+}
