--- a/.codecov.yml
+++ b/.codecov.yml
@@ -12,7 +12,10 @@ coverage:
   - testutil-api/src/main/java/javaclasses/mealorder/testdata/*
 
   status:
-    patch: false
+      patch:
+       default:
+          enabled: yes             # must be yes|true to enable this status
+          target: 95%              # specify the target "X%" coverage to hit
 
 comment:
   layout: "header, diff, changes, uncovered"
