--- a/.codecov.yml
+++ b/.codecov.yml
@@ -12,10 +12,11 @@ coverage:
   - testutil-api/src/main/java/javaclasses/mealorder/testdata/*
 
   status:
-      patch:
-       default:
-          enabled: yes             # must be yes|true to enable this status
-          target: 95%              # specify the target "X%" coverage to hit
+    patch: false
+    project:
+      default:
+        target: 95%
+
 
 comment:
   layout: "header, diff, changes, uncovered"
