Create structure for user pages

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,6 @@ firebase-debug.log
 # Must be kept secure (out of public Git repository at least)
 serviceAccount.json
 google-services.json
+
+bower_components/
+node_modules/
