--- a/client/user/bower.json
+++ b/client/user/bower.json
@@ -13,7 +13,11 @@
     "app-layout": "PolymerElements/app-layout#^2.0.0",
     "app-route": "PolymerElements/app-route#^2.0.0",
     "iron-form": "PolymerElements/iron-form#^2.0.0",
-    "polymer-redux": "^1.0.5"
+    "polymer-redux": "^1.0.5",
+    "iron-pages": "PolymerElements/iron-pages#^2.1.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.2.0",
+    "paper-tabs": "PolymerElements/paper-tabs#^2.1.0",
+    "iron-icons": "PolymerElements/iron-icons#^2.1.1"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
