--- a/client/user/bower.json
+++ b/client/user/bower.json
@@ -13,7 +13,10 @@
     "app-layout": "PolymerElements/app-layout#^2.0.0",
     "app-route": "PolymerElements/app-route#^2.0.0",
     "iron-form": "PolymerElements/iron-form#^2.0.0",
-    "polymer-redux": "^1.0.5"
+    "polymer-redux": "^1.0.5",
+    "iron-list": "PolymerElements/iron-list#^2.0.14",
+    "paper-item": "PolymerElements/paper-item#^2.1.0",
+    "paper-button": "PolymerElements/paper-button#^2.1.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
