--- a/client/user/bower.json
+++ b/client/user/bower.json
@@ -17,7 +17,7 @@
     "iron-pages": "PolymerElements/iron-pages#^2.1.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.2.0",
     "paper-tabs": "PolymerElements/paper-tabs#^2.1.0",
-    "iron-icons": "PolymerElements/iron-icons#^2.1.1"
+    "iron-icons": "PolymerElements/iron-icons#^2.1.1",
     "paper-card": "PolymerElements/paper-card#^2.1.0",
     "vaadin-grid": "vaadin/vaadin-grid#^4.1.7"
   },
