Refactor global vars

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,8 @@
   ],
   "globals": {
     "Polymer": false,
-    "MealOrderApp": true
+    "MealOrderApp": true,
+    "UserAction": true,
+    "initialState": true
   }
 }
