--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,8 @@
   ],
   "globals": {
     "Polymer": false,
-    "MealOrderApp": true
+    "MealOrderApp": false,
+    "Redux": false,
+    "PolymerRedux": false
   }
 }
