Refactor `Utils.js` as exported

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,8 @@
     "Polymer": false,
     "MealOrderApp": true,
     "UserAction": true,
-    "initialState": true
+    "initialState": true,
+    "Redux": true,
+    "PolymerRedux": true,
   }
 }
