Fix global scope for redux

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,7 +44,7 @@
   "globals": {
     "Polymer": false,
     "MealOrderApp": false,
-    "Redux": false,
+    "Redux": true,
     "PolymerRedux": false
   }
 }
