Reducer scope set to true

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,7 +45,7 @@
     "Polymer": false,
     "MealOrderApp": false,
     "Redux": true,
-    "reducer": false,
+    "reducer": true,
     "PolymerRedux": false
   }
 }
