In eslint globals set `MealOrderApp` to true

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,7 @@
   ],
   "globals": {
     "Polymer": false,
-    "MealOrderApp": false,
+    "MealOrderApp": true,
     "assert": false,
     "test": false,
     "suite": false,
