--- a/client/user/package.json
+++ b/client/user/package.json
@@ -7,6 +7,7 @@
     "postinstall": "bower install"
   },
   "dependencies": {
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "sinon": "^4.5.0"
   }
 }
