--- a/client/user/package.json
+++ b/client/user/package.json
@@ -7,7 +7,6 @@
     "postinstall": "bower install"
   },
   "dependencies": {
-    "redux": "^3.6.0",
-    "sinon": "^4.5.0"
+    "redux": "^3.6.0"
   }
 }
