--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,8 @@
     "Polymer": false,
     "MealOrderApp": true,
     "MealOrderAppTest": true,
+    "MealOrderAppTest.MealOrderDrawer": false,
+    "MealOrderAppTest.MealOrderMenuContainer": false,
     "assert": false,
     "test": false,
     "suite": false,
