--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,7 @@
   "globals": {
     "Polymer": false,
     "MealOrderApp": true,
+    "MealOrderAdminApp": true,
     "assert": false,
     "test": false,
     "suite": false,
