--- a/client/admin/bower.json
+++ b/client/admin/bower.json
@@ -12,6 +12,11 @@
     "iron-selector": "PolymerElements/iron-selector#^2.1.0",
     "iron-icons": "PolymerElements/iron-icons#^2.1.1",
     "paper-styles": "PolymerElements/paper-styles#^2.1.0",
+    "iron-list": "PolymerElements/iron-list#^2.0.14",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.2.0",
+    "paper-dialog": "PolymerElements/paper-dialog#^2.1.1",
+    "paper-input": "PolymerElements/paper-input#^2.2.2",
+    "gold-phone-input": "PolymerElements/gold-phone-input#^2.1.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
