--- a/client/admin/bower.json
+++ b/client/admin/bower.json
@@ -16,7 +16,8 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.2.0",
     "paper-dialog": "PolymerElements/paper-dialog#^2.1.1",
     "paper-input": "PolymerElements/paper-input#^2.2.2",
-    "gold-phone-input": "PolymerElements/gold-phone-input#^2.1.0"
+    "gold-phone-input": "PolymerElements/gold-phone-input#^2.1.0",
+    "paper-button": "PolymerElements/paper-button#^2.1.1"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
