--- a/client/admin/bower.json
+++ b/client/admin/bower.json
@@ -11,7 +11,7 @@
     "iron-pages": "PolymerElements/iron-pages#^2.1.1",
     "iron-selector": "PolymerElements/iron-selector#^2.1.0",
     "iron-icons": "PolymerElements/iron-icons#^2.1.1",
-    "paper-styles": "PolymerElements/paper-styles#^2.1.0",
+    "paper-styles": "PolymerElements/paper-styles#^2.1.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
