--- a/client/admin/bower.json
+++ b/client/admin/bower.json
@@ -15,7 +15,8 @@
     "paper-dialog": "PolymerElements/paper-dialog#^2.1.1",
     "paper-input": "PolymerElements/paper-input#^2.2.2",
     "gold-phone-input": "PolymerElements/gold-phone-input#^2.1.0",
-    "paper-button": "PolymerElements/paper-button#^2.1.1"
+    "paper-button": "PolymerElements/paper-button#^2.1.1",
+    "paper-fab-speed-dial": "Collaborne/paper-fab-speed-dial#^2.4.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
