--- a/client/admin/bower.json
+++ b/client/admin/bower.json
@@ -16,7 +16,9 @@
     "paper-input": "PolymerElements/paper-input#^2.2.2",
     "gold-phone-input": "PolymerElements/gold-phone-input#^2.1.0",
     "paper-button": "PolymerElements/paper-button#^2.1.1",
-    "paper-fab-speed-dial": "Collaborne/paper-fab-speed-dial#^2.4.0"
+    "paper-fab-speed-dial": "Collaborne/paper-fab-speed-dial#^2.4.0",
+    "paper-item": "PolymerElements/paper-item#^2.1.1",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.4"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
