--- a/client/admin/bower.json
+++ b/client/admin/bower.json
@@ -18,7 +18,11 @@
     "paper-button": "PolymerElements/paper-button#^2.1.1",
     "paper-fab-speed-dial": "Collaborne/paper-fab-speed-dial#^2.4.0",
     "paper-item": "PolymerElements/paper-item#^2.1.1",
-    "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.4"
+    "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.4",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.1.0",
+    "neon-animation": "PolymerElements/neon-animation#^2.2.1",
+    "web-animations-js": "^2.3.1",
+    "paper-listbox": "PolymerElements/paper-listbox#^2.1.1"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
