--- a/client/admin/bower.json
+++ b/client/admin/bower.json
@@ -22,7 +22,9 @@
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.1.0",
     "neon-animation": "PolymerElements/neon-animation#^2.2.1",
     "web-animations-js": "^2.3.1",
-    "paper-listbox": "PolymerElements/paper-listbox#^2.1.1"
+    "paper-listbox": "PolymerElements/paper-listbox#^2.1.1",
+    "paper-tabs": "PolymerElements/paper-tabs#^2.1.1",
+    "app-datepicker": "motss/app-datepicker#^2.12.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
